react-app/src/components/Dashboard/index.css
#dashboard-container {
  display: flex;
  width: 100%;
  height: 100vh;
}

#dashboard-columns-container {
  display: flex;
  flex: 1;
}

#column-1-background {
  background-color: #2B2D31;
  flex: 0.3;
}

#column-2-background {
  width: 100%;
  background-color: #313338;
  flex: 1;
}
.messages{
  text-align: center;
}

  #column-3-background {
    background-color: #2B2D31;
    flex: 0.3;
  }

  .scrollable-column {
    max-height: 100%;
    overflow-y: auto;
    overflow-x:hidden;
  }
  .scrollable-column::-webkit-scrollbar {
    width: 0.1em;
  }

  .scrollable-column::-webkit-scrollbar-thumb {
    background-color: transparent;
  }

  #column-2-wrapper{
    height: 100%;
  }

